syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package api;

option go_package = "github.com/isnastish/kvs/proto/api";

service TransactionService {
    rpc ReadTransactions(google.protobuf.Empty) returns (stream Transaction);
    rpc WriteTransactions(stream Transaction) returns (google.protobuf.Empty);
    rpc ProcessErrors(google.protobuf.Empty) returns (stream Error);
}

enum StorageType {
    StorageInt = 0;
    StorageFloat = 1;
    StorageStr = 2;
    StorageUint = 3;
    StorageMap = 4;
}

enum TxnType {
    TxnPut = 0;
    TxnGet = 1;
    TxnDel = 2;
    TxnIncr = 3;
    TxnIncrBy = 4;
}

message Map {
    map<string, string> data = 1;
}

message Value {
    oneof value {
        int32 intValue = 1;
        float floatValue = 2;
        uint32 uintValue = 3;
        string strValue = 4;
        Map mapValue = 5;
    }
}

message Transaction {
    google.protobuf.Timestamp timestamp = 1;
    StorageType storageType = 2;
    TxnType txnType = 3;
    string key = 4;
    // Might not be the best solution, but not all the events have value.
    optional Value value = 5;
}

message Error {
    google.protobuf.Timestamp timestamp = 1;
    string message = 2;
}