syntax = "proto3";

package transactions;

option go_package = "github.com/isnastish/kvs/transactions";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TransactionService {
    // Should be a stream?
    rpc WriteTransaction(Transaction) returns (google.protobuf.Empty);

    rpc ProcessErrors(google.protobuf.Empty) returns (stream Error);

    rpc ReadTransactions(google.protobuf.Empty) returns (stream Transaction);
}

enum TxnType {
    TXN_PUT = 0;
    TXN_GET = 1;
    TXN_DEL = 2;
    TXN_INCR = 3;
    TXN_INCR_BY = 4;
}

enum StorageType {
    INT_STORAGE  = 0;
    FLOAT_STORAGE = 1;
    UINT_STORAGE = 2;
    STR_STORAGE = 3;
    MAP_STORAGE = 4;
}

message Transaction {
    TxnType txnType = 1;
    StorageType storageType = 2;
    google.protobuf.Timestamp timestamp = 3;
    string key = 4;
    oneof value {
        int32 intValue = 5;
        double float64Value = 6;
        string strValue = 7;
        google.protobuf.Struct mapValue = 8;
    }
}

message Error {
    string message = 1;
}